# ometa-cpp

./: .gitignore  CMakeLists.txt  README.md  build.py  calculator.cpp  devlog.md  ometa-cpp.ometa  ometa-cpp.ometa.cpp  ometa-self.ometa.cpp  ometa.cpp  ometa.ometa  ometa.ometa.cpp  ometa.txt  playground.cpp  prepare_update.sh  readme.md  runtest.sh  test.cpp  test.ometa  update.sh
examples/: calculator.ometa  ometa.ometa  test.ometa
include/: action.h  any.h  capture.h  choice.h  context.h  debug.h  defer.h  empty.h  epsilon.h  helpers.h  ignore.h  literal.h  lookahead.h  ometa.h  parser.h  predicate.h  range.h  recursion.h  repetition.h  sequence.h  tag.h  taggedtuple.h  view.h  viewtree.h
scripts/: apply_update.sh  build_ometa-cpp.sh  prepare_update.sh  run_test.sh  validate_update.sh  verify_self_transpilation.sh
shed/: auto.cpp  comet.cpp  comet_copy.cpp  comet_copy2.cpp  lambda.cpp  lambda_copy.cpp  pegtl_circle.cpp  playground.cpp
src/: action.h  any.h  binder.h  capture.h  choice.h  context.h  debug.h  empty.h  epsilon.h  helpers.h  ignore.h  literal.h  lookahead.h  match.h  ometa.cpp  ometa.h  parser.h  predicate.h  range.h  recursion.h  repetition.h  sequence.h  snippet.h  sourceview.h  stringliteral.h  tag.h  tree.h  valuetree.h  viewtree.h
update/: CMakeLists.txt  apply_update.sh  cleanup.sh  prepare_update.sh  test_update.sh
