cmake_minimum_required(VERSION 3.5)
project(ometacpp)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_COMPILER clang++-16)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -ferror-limit=1 -ftemplate-backtrace-limit=0")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O0 -ferror-limit=1 -ftemplate-backtrace-limit=0")
add_executable(ometa-cpp ometa-cpp.ometa.cpp)
add_executable(ometa-cpp-debug ometa-cpp.ometa.cpp)
target_compile_definitions(ometa-cpp-debug PUBLIC DEBUG_PRINTS)
add_executable(test test.cpp)
add_executable(testometa test.ometa.cpp)
add_executable(calculator calculator.cpp)
add_executable(playground playground.cpp)
