cmake_minimum_required(VERSION 3.5)
project(ometacpp_update)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_COMPILER clang++-16)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ferror-limit=1 -ftemplate-backtrace-limit=0")
include_directories(..)
add_executable(old_parser_in_old_syntax src/old_parser.ometa.cpp)
add_executable(new_parser_in_old_syntax src/new_parser_in_old_syntax.ometa.cpp)
add_executable(new_parser_in_new_syntax src/new_parser_in_new_syntax.ometa.cpp)
